--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,20 @@ project(db_project)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
     # clang/appleclang/gcc
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2 -Wall -Wextra -pedantic -Wold-style-cast")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O2 -pthread -Wall -Wextra -pedantic -Wold-style-cast")
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     # Microsoft compiler
     set(CMAKE_CXX_FLAGS "/permissive- /W4 /EHsc")
     add_definitions("-D_CRT_SECURE_NO_WARNINGS")
 endif()
 
-
 set(SOURCES main.cpp src/ChronoWrapper.cpp src/MongoDatabase.cpp src/PostgresqlDatabase.cpp)
 
+include_directories("/usr/local/lib/include/mongocxx/v_noabi")
+include_directories("/usr/local/lib/include/bsoncxx/v_noabi")
+
 add_executable(db_project ${SOURCES})
+set(PQ_LIBS pqxx pq)
+SET(MONGO_LIBS mongoc-1.0 mongocxx-static)
+SET(BSON_LIBS bson-static-1.0 bsoncxx-static)
+target_link_libraries(db_project ${PQ_LIBS} ${MONGO_LIBS} ${BSON_LIBS} )
