json array parse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,13 @@ set(SOURCES main.cpp src/ChronoWrapper.cpp src/MongoDatabase.cpp src/PostgresqlD
 include_directories("/usr/local/lib/include/mongocxx/v_noabi")
 include_directories("/usr/local/lib/include/bsoncxx/v_noabi")
 
+find_package(jsoncpp CONFIG REQUIRED)
+
 add_executable(db_project ${SOURCES})
 
 set(PQ_LIBS pqxx pq)
 set(MONGO_LIBS mongoc-1.0 mongocxx-static)
-set(BSON_LIBS bson-static-1.0 bsoncxx-static)
+set(BSON_LIBS bson-1.0 bson-static-1.0 bsoncxx-static)
+set(JSON jsoncpp)
 
-target_link_libraries(db_project ${PQ_LIBS} ${MONGO_LIBS} ${BSON_LIBS} )
+target_link_libraries(db_project ${PQ_LIBS} ${MONGO_LIBS} ${BSON_LIBS} ${JSON})
